Prevent elevation graph from being hidden by side panel

--- a/style.css
+++ b/style.css
@@ -935,6 +935,9 @@ a#info-panel-strava-link:hover {
 
 .elevation-control .background {
   height: 200px !important;
+  position: relative;
+  left: 45px;
+  width: calc(100vw - 385px);
 }
 
 .elevation-summary {
